--- a/workshop.html
+++ b/workshop.html
@@ -68,12 +68,12 @@
             </li>
              <!--Comment this area out when no more workshops!-->
              <li class="nav-item mx-3 dropdown">
-              <a class="nav-link dropdown-toggle active" href="workshop.html">Workshops</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="workshop.html#apply">RSVP</a></li>
-                <li><a class="dropdown-item" href="workshop.html#events">Events</a></li>
-              </ul>
-            </li>
+                <a class="nav-link dropdown-toggle active" href="workshop.html">Workshops</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="workshop.html#apply">RSVP</a></li>
+                  <li><a class="dropdown-item" href="workshop.html#events">Events</a></li>
+                </ul>
+              </li>
             <li class="nav-item mx-3 dropdown">
               <a class="nav-link dropdown-toggle" href="members.html">Members</a>
               <ul class="dropdown-menu">
@@ -93,10 +93,12 @@
     <div class="container py-5">
       <div class="scroll" id="apply">
         <div class="row px-3 px-md-0">
-          <h2 class="text-center mb-4">Rush KTP Fall 2023</h2>
+          <h2 class="text-center mb-4">KTP's Unlock Your Tech Potential Winter 2024</h2>
           <p style="text-align:center">
-            We are excited to announce our Fall 2023 Rush Cycle. Our <a 
-            href="https://docs.google.com/forms/u/1/d/e/1FAIpQLSeKLdJd8zPuWRTKmn2P5nep75R7Lt0AMZDlD3v-7Uxnr8-I-g/closedform">application</a> is live and due at 11:59 PM on Thursday, October 5th.
+            We are excited to announce our first annual Unlock Your Tech Potential Workshop Series. You can <a 
+            href="https://docs.google.com/forms/d/e/1FAIpQLSf49ydpVSisujvNGplIfDc4TUpPQTkdlTvmlFQGjT8QBRYbNg/viewform?usp=sf_link">RSVP</a> here!
+            Join us for an immersive 4-week technology workshop designed to elevate your skills and boost your career in the tech industry. 
+            Engage with industry professionals, receive personalized resume reviews, and explore the world of algorithms, data structures, and personal website design.
             Check out our Instagram (<a href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
             about KTP. 
           </p>
@@ -108,12 +110,12 @@
       <div class="container py-5">
         <div class="scroll" id="events">
           <div class="row px-3 px-md-0">
-            <h2 class="text-center mb-4">Fall Events</h2>
+            <h2 class="text-center mb-4">Workshop Timeline</h2>
             <p style="text-align:center">
-              We require all rushees to attend at least one info session and one other rush event. If this isn't possible for you,
-              reach out to our Director of Membership, Kyle (<a
-                href="mailto:kylew@uchicago.edu"
-                >kylew@uchicago.edu</a
+              We will be holding weekly workshops in Stuart 105 starting on 2/8 on Thursdays 6 - 7 PM. If you have any questions,
+              reach out to our Director of Technology, Nicholas (<a
+                href="mailto:nicholaslee@uchicago.edu"
+                >nicholaslee@uchicago.edu</a
               >).
             </p>
             <div class="cd-timeline js-cd-timeline">
@@ -122,116 +124,81 @@
 
                 <div class="cd-timeline__block">
                   <div class="cd-timeline__img">
-                    <img src="assets/img/rush/guysattable.jpg" alt="" />
+                    <img src="assets/img/workshops/big_little.jpg" alt="" />
                   </div>
 
                   <div class="cd-timeline__content">
-                    <h4>Info Session #1</h4>
-                    <p>
+                    <h4>Intro Into Tech Recruiting and Linkedin/Resume Review</h4>
+                    <!-- <p>
                       <a href="https://fb.me/e/4vykwuMmy">Facebook Event Link (Please RSVP)</a>
-                    </p>
+                    </p> -->
                     <p>
-                      <b>We require all rushees to attend one info session.</b>
-                      They're a great opportunity for you to learn the basics about KTP, meet some
-                      of our members, and decide if our community is one you’d like to become a part
-                      of.
+                    Learn about the basics of recruiting and how to make your resume and LinkedIn stand out during the application process. Get one-on-one feedback
+                    about your resume from our brothers and increase your chances of landing your dream job with personalized advice!
                     </p>
 
                     <a style="font-style: italic"
-                      >Monday, October 2nd | 8:00&#8211;9:00 PM | Stuart 105</a
+                      >Thursday, February 8th | 7:00&#8211;9:00 PM | Stuart 105</a
                     >
                   </div>
                 </div>
                 <div class="cd-timeline__block">
                   <div class="cd-timeline__img">
-                    <img src="assets/img/rush/pyramid.jpg" alt="" />
+                    <img src="assets/img/workshops/ellens_fam.jpg" alt="" />
                   </div>
                   <div class="cd-timeline__content">
-                    <h4>Meet and Greet</h4>
-                    <p>
+                    <h4>Crash Course on Acing the Technical Interview: Algorithms and Data Structures Overview</h4>
+                    <!-- <p>
                       <a href="https://fb.me/e/3SoPnEKbH ">Facebook Event Link (Please RSVP)</a>
-                    </p>
+                    </p> -->
                     <p>
-                      <b>We require all rushees to attend one additional event.</b>
-                      Come join us for a casual session to speak with current brothers and learn more about our chapter!
+                     Dive into the fundamentals of algorithms and data structures and learn how to ace the technical interview.
+                      Get the best practices of sharpening your technical skills to help you land your dream job!
                     </p>
 
                     <a style="font-style: italic"
-                      >Tuesday, October 3rd | 7:00&#8211;9:00 PM | McCormick Lounge
-                    </a>
-                  </div>
-                </div>
-                <div class="cd-timeline__block">
-                  <div class="cd-timeline__img">
-                    <img src="assets/img/rush/BidNight.jpg" alt="" />
-                  </div>
-                  <div class="cd-timeline__content">
-                    <h4>Info Session #2</h4>
-                    <p>
-                      <a href="https://fb.me/e/6emG7IKgo">Facebook Event Link (Please RSVP)</a>
-                    </p>
-                    <p>
-                      <b>We require all rushees to attend one info session.</b>
-                      They're a great opportunity for you to learn the basics about KTP, meet some
-                      of our members, and decide if our community is one you’d like to become a part
-                      of.
-                    </p>
-
-                    <a style="font-style: italic"
-                      >Wednesday, October 4th | 9:00&#8211;10:00 PM | Stuart 102
-                    </a>
-                  </div>
-                </div>
-                <div class="cd-timeline__block">
-                  <div class="cd-timeline__img">
-                    <img src="assets/img/rush/point.jpg" alt="Picture" />
-                  </div>
-
-                  <div class="cd-timeline__content">
-                    <h4>Color a Smile Charity Event</h4>
-                    <p>
-                      <a href="https://fb.me/e/9634oWzQq ">Facebook Event Link (Please RSVP)</a>
-                    </p>
-                    <p>
-                      <b
-                        >We require all rushees to attend one additional event.</b
-                      >
-                      Contributing to the Color A Smile
-                      Charity with your fellow rushees. We will have drawings for you to color and
-                      write messages on, to be distributed to senior citizens, troops serving
-                      overseas, and many others. 
-                    </p>
-
-                    <a style="font-style: italic"
-                      >Thursday, October 5th | 7:00&#8211;8:30 PM | McCormick Lounge</a
+                      >Thursday, February 15th | 7:00&#8211;9:00 PM | Stuart 105</a
                     >
                   </div>
                 </div>
-
                 <div class="cd-timeline__block">
                   <div class="cd-timeline__img">
-                    <img src="assets/img/rush/threebiglittle.jpg" alt="" />
+                    <img src="assets/img/workshops/medici_table.jpg" alt="" />
                   </div>
-
                   <div class="cd-timeline__content">
-                    <h4>Application Due</h4>
-                    <p>Be sure to turn in your online application!</p>
-                    <a style="font-style: italic">Thursday, October 5th | 11:59 PM</a>
+                    <h4>Personal Website Design and Portfolio Building</h4>
+                    <!-- <p>
+                      <a href="https://fb.me/e/6emG7IKgo">Facebook Event Link (Please RSVP)</a>
+                    </p> -->
+                    <p>
+                     Craft your own standout personal website with guidance! Learn how to best showcase 
+                     your skills and projects efficiently to impress recruiters and potential employers. 
+                    </p>
+
+                    <a style="font-style: italic"
+                      >Thursday, February 22nd | 7:00&#8211;9:00 PM | Stuart 105</a
+                    >
                   </div>
                 </div>
-
                 <div class="cd-timeline__block">
                   <div class="cd-timeline__img">
-                    <img src="assets/img/rush/pretselfie.jpg" alt="Picture" />
+                    <img src="assets/img/workshops/sf.jpg" alt="Picture" />
                   </div>
 
                   <div class="cd-timeline__content">
-                    <h4>Closed Rush</h4>
+                    <h4> Kappa Theta Pi Brother Panel: Explore Careers in Tech</h4>
+                    <!-- <p>
+                      <a href="https://fb.me/e/9634oWzQq ">Facebook Event Link (Please RSVP)</a>
+                    </p> -->
                     <p>
-                      Our Closed Rush is invite-only and consists of interviews and two secret
-                      events.
+                        Hear from brothers about their past internship experiences in various tech roles such as 
+                        Data Science, Software Engineering, Product Management and more! We will have experiences 
+                        ranging from Big Tech, Startups, and Finance. 
                     </p>
-                    <a style="font-style: italic">Sunday, October 8th&#8211;Friday, October 13th</a>
+
+                    <a style="font-style: italic"
+                    >Thursday, February 29th | 7:00&#8211;9:00 PM | Stuart 105</a
+                  >
                   </div>
                 </div>
               </div>
@@ -243,7 +210,7 @@
     </div>
 
     <div class="container py-5">
-      <div class="scroll" id="faq">
+      <!-- <div class="scroll" id="faq">
         <div class="row">
           <h2 class="text-center mb-4">Frequently Asked Questions</h2>
 
@@ -411,7 +378,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="container-fluid text-center py-5 footer">
         <p>2023 KTP Theta Chapter. Website by KTP Alpha Chapter.</p>
