--- a/rush.html
+++ b/rush.html
@@ -68,7 +68,7 @@
             </li>
              <!--Comment this area out when no more workshops!-->
              <li class="nav-item mx-3 dropdown">
-              <a class="nav-link dropdown-toggle active" href="workshop.html">Workshops</a>
+              <a class="nav-link dropdown-toggle" href="workshop.html">Workshops</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="workshop.html#apply">RSVP</a></li>
                 <li><a class="dropdown-item" href="workshop.html#events">Events</a></li>
