--- a/members.html
+++ b/members.html
@@ -69,14 +69,14 @@
                 <li><a class="dropdown-item" href="rush.html#faq">FAQ</a></li>
               </ul>
             </li>
-            <!--Comment this area out when no more workshops!-->
-            <li class="nav-item mx-3 dropdown">
-            <a class="nav-link dropdown-toggle active" href="rush.html">Workshops</a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="workshop.html#apply">RSVP</a></li>
-              <li><a class="dropdown-item" href="workshop.html#events">Events</a></li>
-            </ul>
-          </li>
+               <!--Comment this area out when no more workshops!-->
+               <li class="nav-item mx-3 dropdown">
+                <a class="nav-link dropdown-toggle" href="workshop.html">Workshops</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="workshop.html#apply">RSVP</a></li>
+                  <li><a class="dropdown-item" href="workshop.html#events">Events</a></li>
+                </ul>
+              </li>
             <li class="nav-item mx-3 dropdown">
               <a class="nav-link dropdown-toggle active" href="members.html">Members</a>
               <ul class="dropdown-menu">
