--- a/workshop.html
+++ b/workshop.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Rush | KTP</title>
+    <title>Workshops | KTP</title>
     <meta
       name="description"
       content="Kappa Theta Pi. Professional technology fraternity at The University of Chicago."
