--- a/rush.html
+++ b/rush.html
@@ -70,7 +70,7 @@
              <li class="nav-item mx-3 dropdown">
               <a class="nav-link dropdown-toggle" href="workshop.html">Workshops</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="workshop.html#apply">RSVP</a></li>
+                <li><a class="dropdown-item" href="workshop.html#rsvp">RSVP</a></li>
                 <li><a class="dropdown-item" href="workshop.html#events">Events</a></li>
               </ul>
             </li>
