adding spring rush initial details

--- a/rush.html
+++ b/rush.html
@@ -93,10 +93,10 @@
     <div class="container py-5">
       <div class="scroll" id="apply">
         <div class="row px-3 px-md-0">
-          <h2 class="text-center mb-4">Rush KTP Fall 2023</h2>
+          <h2 class="text-center mb-4">Rush KTP Spring 2024</h2>
           <p style="text-align:center">
-            We are excited to announce our Fall 2023 Rush Cycle. Our <a 
-            href="https://docs.google.com/forms/u/1/d/e/1FAIpQLSeKLdJd8zPuWRTKmn2P5nep75R7Lt0AMZDlD3v-7Uxnr8-I-g/closedform">application</a> is live and due at 11:59 PM on Thursday, October 5th.
+            We are excited to announce our Spring 2024 Rush Cycle. Our <a 
+            href="https://forms.gle/zB3ocMQoDLkVaZnu7">application</a> is live and due at 11:59 PM on Thursday, March 21st.
             Check out our Instagram (<a href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
             about KTP. 
           </p>
@@ -108,13 +108,16 @@
       <div class="container py-5">
         <div class="scroll" id="events">
           <div class="row px-3 px-md-0">
-            <h2 class="text-center mb-4">Fall Events</h2>
+            <h2 class="text-center mb-4">Spring Events</h2>
             <p style="text-align:center">
               We require all rushees to attend at least one info session and one other rush event. If this isn't possible for you,
-              reach out to our Director of Membership, Kyle (<a
+              reach out to one of our Co-Directors of Membership, Kyle (<a
                 href="mailto:kylew@uchicago.edu"
                 >kylew@uchicago.edu</a
-              >).
+              >) or Ryan (<a 
+                href="mailto:ryanlobo@uchicago.edu"
+                >ryanlobo@uchicago.edu</a>
+              ).
             </p>
             <div class="cd-timeline js-cd-timeline">
               <div class="container cd-timeline__container">
@@ -126,9 +129,9 @@
                   </div>
 
                   <div class="cd-timeline__content">
-                    <h4>Info Session #1</h4>
+                    <h4>Welcome to SimCity: An Intro to KTP</h4>
                     <p>
-                      <a href="https://fb.me/e/4vykwuMmy">Facebook Event Link (Please RSVP)</a>
+                      <!-- <a href="https://fb.me/e/4vykwuMmy">Facebook Event Link (Please RSVP)</a> -->
                     </p>
                     <p>
                       <b>We require all rushees to attend one info session.</b>
@@ -138,7 +141,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Monday, October 2nd | 8:00&#8211;9:00 PM | Stuart 105</a
+                      >Monday, March 18th | 8:00&#8211;9:00 PM | Location TBD</a
                     >
                   </div>
                 </div>
@@ -149,7 +152,7 @@
                   <div class="cd-timeline__content">
                     <h4>Meet and Greet</h4>
                     <p>
-                      <a href="https://fb.me/e/3SoPnEKbH ">Facebook Event Link (Please RSVP)</a>
+                      <!-- <a href="https://fb.me/e/3SoPnEKbH ">Facebook Event Link (Please RSVP)</a> -->
                     </p>
                     <p>
                       <b>We require all rushees to attend one additional event.</b>
@@ -157,7 +160,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Tuesday, October 3rd | 7:00&#8211;9:00 PM | McCormick Lounge
+                      >Tuesday, March 19th | 7:00&#8211;9:00 PM | Location TBD
                     </a>
                   </div>
                 </div>
@@ -166,9 +169,9 @@
                     <img src="assets/img/rush/BidNight.jpg" alt="" />
                   </div>
                   <div class="cd-timeline__content">
-                    <h4>Info Session #2</h4>
+                    <h4>Sim City 2: An Intro to KTP</h4>
                     <p>
-                      <a href="https://fb.me/e/6emG7IKgo">Facebook Event Link (Please RSVP)</a>
+                      <!-- <a href="https://fb.me/e/6emG7IKgo">Facebook Event Link (Please RSVP)</a> -->
                     </p>
                     <p>
                       <b>We require all rushees to attend one info session.</b>
@@ -178,7 +181,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Wednesday, October 4th | 9:00&#8211;10:00 PM | Stuart 102
+                      >Wednesday, March 20th | 9:00&#8211;10:00 PM | Location TBD
                     </a>
                   </div>
                 </div>
@@ -190,7 +193,7 @@
                   <div class="cd-timeline__content">
                     <h4>Color a Smile Charity Event</h4>
                     <p>
-                      <a href="https://fb.me/e/9634oWzQq ">Facebook Event Link (Please RSVP)</a>
+                      <!-- <a href="https://fb.me/e/9634oWzQq ">Facebook Event Link (Please RSVP)</a> -->
                     </p>
                     <p>
                       <b
@@ -203,7 +206,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Thursday, October 5th | 7:00&#8211;8:30 PM | McCormick Lounge</a
+                      >Thursday, March 21st | 7:00&#8211;8:30 PM | Location TBD</a
                     >
                   </div>
                 </div>
@@ -216,7 +219,8 @@
                   <div class="cd-timeline__content">
                     <h4>Application Due</h4>
                     <p>Be sure to turn in your online application!</p>
-                    <a style="font-style: italic">Thursday, October 5th | 11:59 PM</a>
+                    <p>Submit <a href="https://forms.gle/zB3ocMQoDLkVaZnu7">here</a>!</p>
+                    <a style="font-style: italic">Thursday, March 21st | 11:59 PM</a>
                   </div>
                 </div>
 
@@ -231,7 +235,7 @@
                       Our Closed Rush is invite-only and consists of interviews and two secret
                       events.
                     </p>
-                    <a style="font-style: italic">Sunday, October 8th&#8211;Friday, October 13th</a>
+                    <a style="font-style: italic">Sunday, March 24th&#8211;Friday, March 28th</a>
                   </div>
                 </div>
               </div>
