adding rush details

--- a/rush.html
+++ b/rush.html
@@ -131,7 +131,7 @@
                   <div class="cd-timeline__content">
                     <h4>Welcome to SimCity: An Intro to KTP</h4>
                     <p>
-                      <!-- <a href="https://fb.me/e/4vykwuMmy">Facebook Event Link (Please RSVP)</a> -->
+                      <a href="https://www.facebook.com/events/3787415904869979">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
                       <b>We require all rushees to attend one info session.</b>
@@ -141,7 +141,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Monday, March 18th | 8:00&#8211;9:00 PM | Location TBD</a
+                      >Monday, March 18th | 9:00&#8211;10:00 PM | Stuart 105</a
                     >
                   </div>
                 </div>
@@ -152,7 +152,7 @@
                   <div class="cd-timeline__content">
                     <h4>Meet and Greet</h4>
                     <p>
-                      <!-- <a href="https://fb.me/e/3SoPnEKbH ">Facebook Event Link (Please RSVP)</a> -->
+                      <a href="https://www.facebook.com/events/885038126705747">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
                       <b>We require all rushees to attend one additional event.</b>
@@ -160,7 +160,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Tuesday, March 19th | 7:00&#8211;9:00 PM | Location TBD
+                      >Tuesday, March 19th | 7:00&#8211;9:00 PM | McCormick Lounge
                     </a>
                   </div>
                 </div>
@@ -171,7 +171,7 @@
                   <div class="cd-timeline__content">
                     <h4>Sim City 2: An Intro to KTP</h4>
                     <p>
-                      <!-- <a href="https://fb.me/e/6emG7IKgo">Facebook Event Link (Please RSVP)</a> -->
+                      <a href="https://www.facebook.com/events/332406059804407">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
                       <b>We require all rushees to attend one info session.</b>
@@ -181,7 +181,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Wednesday, March 20th | 9:00&#8211;10:00 PM | Location TBD
+                      >Wednesday, March 20th | 9:00&#8211;10:00 PM | Stuart 101
                     </a>
                   </div>
                 </div>
@@ -193,7 +193,7 @@
                   <div class="cd-timeline__content">
                     <h4>Color a Smile Charity Event</h4>
                     <p>
-                      <!-- <a href="https://fb.me/e/9634oWzQq ">Facebook Event Link (Please RSVP)</a> -->
+                      <a href="https://www.facebook.com/events/8172338656115352 ">Facebook Event Link (Please RSVP)</a>
                     </p>
                     <p>
                       <b
@@ -206,7 +206,7 @@
                     </p>
 
                     <a style="font-style: italic"
-                      >Thursday, March 21st | 7:00&#8211;8:30 PM | Location TBD</a
+                      >Thursday, March 21st | 7:00&#8211;8:30 PM | McCormick Lounge</a
                     >
                   </div>
                 </div>
