--- a/rush.html
+++ b/rush.html
@@ -96,7 +96,7 @@
           <h2 class="text-center mb-4">Rush KTP Spring 2024</h2>
           <p style="text-align:center">
             We are excited to announce our Spring 2024 Rush Cycle. Our <a 
-            href="https://forms.gle/zB3ocMQoDLkVaZnu7">interest form</a> is live and due at 11:59 PM on Thursday, March 21st.
+            href="https://forms.gle/5bAZQeWQq2mRRwfb6">application</a> is live and due at 11:59 PM on Thursday, March 21st.
             Check out our Instagram (<a href="https://www.instagram.com/uchicagoktp/">@uchicagoktp</a>) to learn more
             about KTP. 
           </p>
@@ -219,7 +219,7 @@
                   <div class="cd-timeline__content">
                     <h4>Application Due</h4>
                     <p>Be sure to turn in your online application!</p>
-                    <p>Join our interest <a href="https://forms.gle/zB3ocMQoDLkVaZnu7">form</a>!</p>
+                    <p>Apply <a href="https://forms.gle/5bAZQeWQq2mRRwfb6">here</a>!</p>
                     <a style="font-style: italic">Thursday, March 21st | 11:59 PM</a>
                   </div>
                 </div>
