--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         </h3>
         <div class="mb-4">
           <a href="rush.html#apply" class="btn-rush">RUSH</a>
-          <a href="https://docs.google.com/forms/u/1/d/e/1FAIpQLSeKLdJd8zPuWRTKmn2P5nep75R7Lt0AMZDlD3v-7Uxnr8-I-g/closedform" class="btn-rush">APPLY</a>
-          <a href="workshop.html#rsvp" class="btn-rush">WORKSHOPS</a>
+          <a href="https://forms.gle/5bAZQeWQq2mRRwfb6" class="btn-rush">APPLY</a>
+          <!-- <a href="workshop.html#rsvp" class="btn-rush">WORKSHOPS</a> -->
         </div>
       </div>
     </div>
