--- a/members.html
+++ b/members.html
@@ -437,7 +437,7 @@
             Oscar Chen<br />
             Kasey Corra<br />
             Luca Dovichi<br />
-            Alan Hernedez<br />
+            Alan Hernandez<br />
             Minseo Kim<br />
             Quincy Leung<br />
             Connor McGraw<br />
