--- a/react-app/public/404.html
+++ b/react-app/public/404.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 Not Found</title>
-  <!-- <script>
+  <script>
     // Get the current URL path
     const path = window.location.pathname;
     // Redirect to the hash-based route
     window.location.href = `/#${path}`;
-  </script> -->
+  </script>
 </head>
 <body>
   <h1>404 - Page Not Found</h1>
